[package]
name = "wowsreplay"
version = "0.1.0"
authors = ["Lander Brandt <landerbrandt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wowsreplay_parser = {path = "../wowsreplay_parser"}
structopt = "0.3"
memmap = "0.7"
serde_json = "1.0"