[package]
name = "wowsreplay_parser"
version = "0.1.0"
authors = ["Lander Brandt <landerbrandt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0"
blowfish = "0.7"
flate2 = "1.0.19"
byteorder = "1.3"